# neuland.app-ical-service

./: .env.local  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: build-nix.yml  build.yml  ci-test.yml
kubernetes/: ical-service-deployment.yaml  ical-service-service.yaml
kustomize/: deployment.yaml  imagepolicy.yaml  imagerepository.yaml  service.yaml
src/: graphql.rs  graphql_client.rs  ical_service.rs  main.rs
src/gql/: queries.graphql  schema.json
